--- a/src/pages/gallery.astro
+++ b/src/pages/gallery.astro
@@ -4,5 +4,5 @@ import Hero from '../components/Hero';
 ---
 
 <Layout title='gallery' metaDescription='this is my other astro page'>
-  <Hero welcomeText='welomce to my gallery' tagline='it sucks' />
+  <Hero welcomeText='welomce to my gallery' tagline='it sucks' backgroundImage='../assets/placeholder/1920_x_1080' />
 </Layout>
