--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,7 @@ import StatsCard from '../components/StatsCard';
     <Hero
       welcomeText='Welcome to Liberal Media'
       tagline='Lorem ipsum dolor sit amet consectetur adipisicing elit.'
+      backgroundImage='../assets/placeholders/1920x1080.jpg'
     />
     <AboutCard
       aboutTitle='this is where I make a title about some stuff that we do'
