--- a/src/pages/gallery.astro
+++ b/src/pages/gallery.astro
@@ -1,7 +1,6 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Hero from '../components/Hero';
-import { imageConfig } from 'astro:assets';
 import PictureGallery from '../components/PictureGallery';
 ---
 
@@ -13,7 +12,7 @@ import PictureGallery from '../components/PictureGallery';
       { imageRef: 'na', link: '/', title: 'firehydrant' },
       { imageRef: 'na', link: '/', title: 'recycling bin' },
       { imageRef: 'na', link: '/', title: 'compiuet' },
-      { imageRef: 'na', link: '/', title: 'red card' },
+      { imageRef: 'na', link: '/', title: 'red car' },
       { imageRef: 'na', link: '/', title: 'blue car' },
       { imageRef: 'na', link: '/', title: 'grey car' },
       { imageRef: 'na', link: '/', title: 'white car' },
