--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Layout from '../layouts/Layout.astro';
 import Hero from '../components/Hero';
 import AboutCard from '../components/AboutCard';
 import StatsCard from '../components/StatsCard';
+import TextImagecard from '../components/TextImageCard';
 ---
 
 <Layout title='Welcome to Astro.' metaDescription='this is my first astro page'>
@@ -17,6 +18,14 @@ import StatsCard from '../components/StatsCard';
       aboutBody='its super cool'
       linkText='Click here to find out'
     />
+    <StatsCard />
+    <TextImagecard
+      title='title'
+      bodyText='blah blah'
+      imageAltText='cool picture'
+      imageLink='assets/placeholders/1200 x 800.jpg'
+      linK='/'
+      linkText='click me'
+    />
   </main>
-  <StatsCard />
 </Layout>
