added viewport animation

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ import TextImagecard from '../components/TextImageCard';
       aboutBody='its super cool'
       linkText='Click here to find out'
     />
-    <StatsCard />
+    <StatsCard client:load />
     <TextImagecard
       title='title'
       bodyText='blah blah'
