--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import TextImagecard from '../components/TextImageCard';
     <Hero
       welcomeText='Welcome to Liberal Media'
       tagline='Lorem ipsum dolor sit amet consectetur adipisicing elit.'
-      backgroundImages={['../assets/placeholders/1920x1080.jpg', '../assets/placeholders/1280x720.jpg', '../assets/placeholders/1920x1080.jpg', '../assets/placeholders/1280x720.jpg']}
+      backgroundImages={['../assets/placeholders/1920x1080.jpg', '../assets/placeholders/1280x720.jpg', '../assets/placeholders/1200x800.jpg']}
       slideTime={5000}
       client:load
     />
@@ -55,7 +55,7 @@ import TextImagecard from '../components/TextImageCard';
       title='title'
       bodyText='blah blah'
       imageAltText='cool picture'
-      imageLink='assets/placeholders/1200 x 800.jpg'
+      imageLink='assets/placeholders/1200x800.jpg'
       linK='/'
       linkText='click me'
     />
