gallery now takes pictures

--- a/src/pages/gallery.astro
+++ b/src/pages/gallery.astro
@@ -8,28 +8,97 @@ import PictureGallery from '../components/PictureGallery';
   <Hero
     welcomeText='welomce to my gallery'
     tagline='it sucks'
-    backgroundImages={['../assets/placeholders/1920x1080.jpg', '../assets/placeholders/1280x720.jpg', '../assets/placeholders/1920x1080.jpg', '../assets/placeholders/1280x720.jpg']}
-      slideTime={5000}
-      client:load
+    backgroundImages={[
+      '../assets/placeholders/1920x1080.jpg',
+      '../assets/placeholders/1280x720.jpg',
+      '../assets/placeholders/1920x1080.jpg',
+      '../assets/placeholders/1280x720.jpg',
+    ]}
+    slideTime={5000}
+    client:load
   />
   <PictureGallery
     images={[
-      { imageRef: 'na', link: '/', title: 'trashcan' },
-      { imageRef: 'na', link: '/', title: 'firehydrant' },
-      { imageRef: 'na', link: '/', title: 'recycling bin' },
-      { imageRef: 'na', link: '/', title: 'compiuet' },
-      { imageRef: 'na', link: '/', title: 'red car' },
-      { imageRef: 'na', link: '/', title: 'blue car' },
-      { imageRef: 'na', link: '/', title: 'grey car' },
-      { imageRef: 'na', link: '/', title: 'white car' },
-      { imageRef: 'na', link: '/', title: 'pink car' },
-      { imageRef: 'na', link: '/', title: 'purple car' },
-      { imageRef: 'na', link: '/', title: ' green car' },
-      { imageRef: 'na', link: '/', title: 'orangecar' },
-      { imageRef: 'na', link: '/', title: 'tall car' },
-      { imageRef: 'na', link: '/', title: 'small car' },
-      { imageRef: 'na', link: '/', title: 'long car' },
-      { imageRef: 'na', link: '/', title: 'short car' },
+      {
+        imageRef: 'assets/placeholders/1200x800.jpg',
+        link: '/',
+        title: 'trashcan',
+      },
+      {
+        imageRef: 'assets/placeholders/1200x800.jpg',
+        link: '/',
+        title: 'firehydrant',
+      },
+      {
+        imageRef: 'assets/placeholders/1200x800.jpg',
+        link: '/',
+        title: 'recycling bin',
+      },
+      {
+        imageRef: 'assets/placeholders/1200x800.jpg',
+        link: '/',
+        title: 'compiuet',
+      },
+      {
+        imageRef: 'assets/placeholders/1200x800.jpg',
+        link: '/',
+        title: 'red car',
+      },
+      {
+        imageRef: 'assets/placeholders/1200x800.jpg',
+        link: '/',
+        title: 'blue car',
+      },
+      {
+        imageRef: 'assets/placeholders/1200x800.jpg',
+        link: '/',
+        title: 'grey car',
+      },
+      {
+        imageRef: 'assets/placeholders/1200x800.jpg',
+        link: '/',
+        title: 'white car',
+      },
+      {
+        imageRef: 'assets/placeholders/1200x800.jpg',
+        link: '/',
+        title: 'pink car',
+      },
+      {
+        imageRef: 'assets/placeholders/1200x800.jpg',
+        link: '/',
+        title: 'purple car',
+      },
+      {
+        imageRef: 'assets/placeholders/1200x800.jpg',
+        link: '/',
+        title: ' green car',
+      },
+      {
+        imageRef: 'assets/placeholders/1200x800.jpg',
+        link: '/',
+        title: 'orangecar',
+      },
+      {
+        imageRef: 'assets/placeholders/1200x800.jpg',
+        link: '/',
+        title: 'tall car',
+      },
+      {
+        imageRef: 'assets/placeholders/1200x800.jpg',
+        link: '/',
+        title: 'small car',
+      },
+      {
+        imageRef: 'assets/placeholders/1200x800.jpg',
+        link: '/',
+        title: 'long car',
+      },
+      {
+        imageRef: 'assets/placeholders/1200x800.jpg',
+        link: '/',
+        title: 'short car',
+      },
     ]}
   />
 </Layout>
