updated to new name

--- a/src/pages/gallery.astro
+++ b/src/pages/gallery.astro
@@ -20,7 +20,7 @@ import PictureGallery from '../components/PictureGallery';
   <PictureGallery
     images={[
       {
-        imageRef: 'assets/placeholders/1200x800.jpg',
+        imageRef: '../assets/placeholders/1200x800.jpg',
         link: '/',
         title: 'trashcan',
       },
