--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import TextImagecard from '../components/TextImageCard';
 <Layout title='Welcome to Astro.' metaDescription='this is my first astro page'>
   <main>
     <Hero
-      welcomeText='Welcome to Liberal Media'
+      welcomeText='Welcome to EgoDeath'
       tagline='Lorem ipsum dolor sit amet consectetur adipisicing elit.'
       backgroundImages={[
         '../assets/placeholders/1920x1080.jpg',
