added new pages

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,7 +23,7 @@ const { title, metaDescription } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
-    <Header title='EgoDeath' navs={['commercial', 'food', 'events']} />
+    <Header title='EgoDeath' navs={['commercials', 'food', 'events']} />
     <slot />
   </body>
 </html>
