--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -2,4 +2,4 @@
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout metaDescription='contact us' title='Contact Us: EgoDeath' />
+<Layout metaDescription='contact us' title='Contact Us' />
