--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import StatsCard from '../components/StatsCard';
 import TextImagecard from '../components/TextImageCard';
 ---
 
-<Layout title='Welcome to Astro.' metaDescription='this is my first astro page'>
+<Layout title='' metaDescription='this is my first astro page'>
   <main>
     <Hero
       welcomeText='Welcome to EgoDeath'
