updating project info component

--- a/src/pages/commercials/[project].astro
+++ b/src/pages/commercials/[project].astro
@@ -35,5 +35,6 @@ const { testData } = Astro.props;
     title='FAKE'
     company='ggole'
     credits={['me', 'clifford']}
+    date='January 26, 2024'
   />
 </Layout>
