made stats card mobile responsive

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -38,22 +38,7 @@ import TextImagecard from '../components/TextImageCard';
     4. 	Nikola VucevicCHI	17
     Assists
     1. 	LaMelo BallCHA	13
-    1. 	Luka DoncicDAL	13
-    1. 	Donovan MitchellCLE	13
-    4. 	Anthony EdwardsMIN	11
-    5. 	Giannis AntetokounmpoMIL	10
-    Blocks
-    1. 	Scottie BarnesTOR	6
-    2. 	John KoncharMEM	5
-    2. 	Isaiah StewartDET	5
-    4. 	Brook LopezMIL	4
-    5. 	Alex CarusoCHI	3
-    Steals
-    1. 	Jaren Jackson Jr.MEM	6
-    2. 	Donovan MitchellCLE	4
-    3. 	Giannis AntetokounmpoMIL	3
-    3. 	LaMelo BallCHA	3
-    3. 	Nicolas BatumPHI	3`
+    1. 	Luka DoncicDAL	13`
       client:load
     />
     <TextImagecard
