fixing prop name

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -38,7 +38,9 @@ const { title, metaDescription } = Astro.props;
   </head>
   <body>
     <Header title='EgoDeath' navs={['commercials', 'food', 'events']} />
-    <slot />
+    <main>
+      <slot />
+    </main>
   </body>
 </html>
 
