--- a/src/pages/commercials/index.astro
+++ b/src/pages/commercials/index.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from '../../layouts/Layout.astro';
 import Hero from '../../components/Hero';
+import TextImageCard from '../../components/TextImageCard';
 ---
 
 <Layout metaDescription='commercials' title='Commercials'>
@@ -13,5 +14,35 @@ import Hero from '../../components/Hero';
     ]}
     tagline=''
     welcomeText=''
+  />
+  <TextImageCard
+    bodyText='we did some fun stuff here'
+    imageAltText='fun stuff'
+    imageLink='assets/placeholders/1200x800.jpg'
+    title='fun stuff'
+    link='/clifford'
+    linkText='See More'
+  />
+  <TextImageCard
+    bodyText='we did some fun stuff here'
+    imageAltText='fun stuff'
+    imageLink='assets/placeholders/1200x800.jpg'
+    title='fun stuff'
+    link='/clifford'
+    linkText='See More'
+  /><TextImageCard
+    bodyText='we did some fun stuff here'
+    imageAltText='fun stuff'
+    imageLink='assets/placeholders/1200x800.jpg'
+    title='fun stuff'
+    link='/clifford'
+    linkText='See More'
+  /><TextImageCard
+    bodyText='we did some fun stuff here'
+    imageAltText='fun stuff'
+    imageLink='assets/placeholders/1200x800.jpg'
+    title='fun stuff'
+    link='/clifford'
+    linkText='See More'
   />
 </Layout>
