--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,27 +7,26 @@ import TextImagecard from '../components/TextImageCard';
 ---
 
 <Layout title='' metaDescription='this is my first astro page'>
-  <main>
-    <Hero
-      welcomeText='Welcome to EgoDeath'
-      tagline='Lorem ipsum dolor sit amet consectetur adipisicing elit.'
-      backgroundImages={[
-        '../assets/placeholders/1920x1080.jpg',
-        '../assets/placeholders/1280x720.jpg',
-        '../assets/placeholders/1920x1080.jpg',
-        '../assets/placeholders/1280x720.jpg',
-      ]}
-      slideTime={5000}
-      client:load
-    />
-    <AboutCard
-      aboutTitle='this is where I make a title about some stuff that we do'
-      aboutBody='its super cool'
-      linkText='Click here to find out'
-    />
-    <StatsCard
-      title='Hello Look at my Stats'
-      body=`3. 	Kevin DurantPHX	43
+  <Hero
+    welcomeText='Welcome to EgoDeath'
+    tagline='Lorem ipsum dolor sit amet consectetur adipisicing elit.'
+    backgroundImages={[
+      '../assets/placeholders/1920x1080.jpg',
+      '../assets/placeholders/1280x720.jpg',
+      '../assets/placeholders/1920x1080.jpg',
+      '../assets/placeholders/1280x720.jpg',
+    ]}
+    slideTime={5000}
+    client:load
+  />
+  <AboutCard
+    aboutTitle='this is where I make a title about some stuff that we do'
+    aboutBody='its super cool'
+    linkText='Click here to find out'
+  />
+  <StatsCard
+    title='Hello Look at my Stats'
+    body=`3. 	Kevin DurantPHX	43
     4. 	Jayson TatumBOS	39
     5. 	Dejounte MurrayATL	35
     Rebounds
@@ -39,15 +38,14 @@ import TextImagecard from '../components/TextImageCard';
     Assists
     1. 	LaMelo BallCHA	13
     1. 	Luka DoncicDAL	13`
-      client:load
-    />
-    <TextImagecard
-      title='title'
-      bodyText='blah blah'
-      imageAltText='cool picture'
-      imageLink='assets/placeholders/1200x800.jpg'
-      linK='/'
-      linkText='click me'
-    />
-  </main>
+    client:load
+  />
+  <TextImagecard
+    title='title'
+    bodyText='blah blah'
+    imageAltText='cool picture'
+    imageLink='assets/placeholders/1200x800.jpg'
+    link='/'
+    linkText='click me'
+  />
 </Layout>
