added revesed option for statsimagecard

--- a/src/pages/commercials/index.astro
+++ b/src/pages/commercials/index.astro
@@ -22,6 +22,7 @@ import TextImageCard from '../../components/TextImageCard';
     title='fun stuff'
     link='/clifford'
     linkText='See More'
+    reversed={false}
   />
   <TextImageCard
     bodyText='we did some fun stuff here'
@@ -30,6 +31,7 @@ import TextImageCard from '../../components/TextImageCard';
     title='fun stuff'
     link='/clifford'
     linkText='See More'
+    reversed={true}
   /><TextImageCard
     bodyText='we did some fun stuff here'
     imageAltText='fun stuff'
@@ -37,6 +39,7 @@ import TextImageCard from '../../components/TextImageCard';
     title='fun stuff'
     link='/clifford'
     linkText='See More'
+    reversed={false}
   /><TextImageCard
     bodyText='we did some fun stuff here'
     imageAltText='fun stuff'
@@ -44,5 +47,6 @@ import TextImageCard from '../../components/TextImageCard';
     title='fun stuff'
     link='/clifford'
     linkText='See More'
+    reversed={true}
   />
 </Layout>
