fixed issue where screen was too wide

--- a/src/pages/commercials/index.astro
+++ b/src/pages/commercials/index.astro
@@ -23,6 +23,14 @@ import TextImageCard from '../../components/TextImageCard';
     link='/clifford'
     linkText='See More'
     reversed={false}
+  /><TextImageCard
+    bodyText='we did some fun stuff here'
+    imageAltText='fun stuff'
+    imageLink='assets/placeholders/1200x800.jpg'
+    title='fun stuff'
+    link='/clifford'
+    linkText='See More'
+    reversed={true}
   />
   <TextImageCard
     bodyText='we did some fun stuff here'
@@ -31,16 +39,9 @@ import TextImageCard from '../../components/TextImageCard';
     title='fun stuff'
     link='/clifford'
     linkText='See More'
-    reversed={true}
-  /><TextImageCard
-    bodyText='we did some fun stuff here'
-    imageAltText='fun stuff'
-    imageLink='assets/placeholders/1200x800.jpg'
-    title='fun stuff'
-    link='/clifford'
-    linkText='See More'
     reversed={false}
-  /><TextImageCard
+  />
+  <TextImageCard
     bodyText='we did some fun stuff here'
     imageAltText='fun stuff'
     imageLink='assets/placeholders/1200x800.jpg'
