--- a/src/pages/commercials/[project].astro
+++ b/src/pages/commercials/[project].astro
@@ -24,10 +24,10 @@ const { testData } = Astro.props;
     tagline={testData}
     welcomeText={testData}
     backgroundImages={[
-      '../assets/placeholders/1920x1080.jpg',
-      '../assets/placeholders/1280x720.jpg',
-      '../assets/placeholders/1920x1080.jpg',
-      '../assets/placeholders/1280x720.jpg',
+      'src/assets/placeholders/1920x1080.jpg',
+      'src/assets/placeholders/1280x720.jpg',
+      'src/assets/placeholders/1920x1080.jpg',
+      'src/assets/placeholders/1280x720.jpg',
     ]}
   />
   <ProjectPageInfo
