--- a/src/pages/commercials/index.astro
+++ b/src/pages/commercials/index.astro
@@ -7,10 +7,10 @@ import TextImageCard from '../../components/TextImageCard';
 <Layout metaDescription='commercials' title='Commercials'>
   <Hero
     backgroundImages={[
-      '../assets/placeholders/1920x1080.jpg',
-      '../assets/placeholders/1280x720.jpg',
-      '../assets/placeholders/1920x1080.jpg',
-      '../assets/placeholders/1280x720.jpg',
+      'src/assets/placeholders/1920x1080.jpg',
+      'src/assets/placeholders/1280x720.jpg',
+      'src/assets/placeholders/1920x1080.jpg',
+      'src/assets/placeholders/1280x720.jpg',
     ]}
     tagline=''
     welcomeText=''
@@ -18,35 +18,35 @@ import TextImageCard from '../../components/TextImageCard';
   <TextImageCard
     bodyText='we did some fun stuff here'
     imageAltText='fun stuff'
-    imageLink='assets/placeholders/1200x800.jpg'
+    imageLink='src/assets/placeholders/1200x800.jpg'
     title='fun stuff'
-    link='/clifford'
+    link='/commercials/clifford'
     linkText='See More'
     reversed={false}
   /><TextImageCard
     bodyText='we did some fun stuff here'
     imageAltText='fun stuff'
-    imageLink='assets/placeholders/1200x800.jpg'
+    imageLink='src/assets/placeholders/1200x800.jpg'
     title='fun stuff'
-    link='/clifford'
+    link='/commercials/clifford'
     linkText='See More'
     reversed={true}
   />
   <TextImageCard
     bodyText='we did some fun stuff here'
     imageAltText='fun stuff'
-    imageLink='assets/placeholders/1200x800.jpg'
+    imageLink='src/assets/placeholders/1200x800.jpg'
     title='fun stuff'
-    link='/clifford'
+    link='/commercials/clifford'
     linkText='See More'
     reversed={false}
   />
   <TextImageCard
     bodyText='we did some fun stuff here'
     imageAltText='fun stuff'
-    imageLink='assets/placeholders/1200x800.jpg'
+    imageLink='src/assets/placeholders/1200x800.jpg'
     title='fun stuff'
-    link='/clifford'
+    link='/commercials/clifford'
     linkText='See More'
     reversed={true}
   />
