--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,10 +11,10 @@ import TextImagecard from '../components/TextImageCard';
     welcomeText='Welcome to EgoDeath'
     tagline='Lorem ipsum dolor sit amet consectetur adipisicing elit.'
     backgroundImages={[
-      '../assets/placeholders/1920x1080.jpg',
-      '../assets/placeholders/1280x720.jpg',
-      '../assets/placeholders/1920x1080.jpg',
-      '../assets/placeholders/1280x720.jpg',
+      'src/assets/placeholders/1920x1080.jpg',
+      'src/assets/placeholders/1280x720.jpg',
+      'src/assets/placeholders/1920x1080.jpg',
+      'src/assets/placeholders/1280x720.jpg',
     ]}
     slideTime={5000}
     client:load
@@ -44,8 +44,9 @@ import TextImagecard from '../components/TextImageCard';
     title='title'
     bodyText='blah blah'
     imageAltText='cool picture'
-    imageLink='assets/placeholders/1200x800.jpg'
+    imageLink='src/assets/placeholders/1200x800.jpg'
     link='/'
     linkText='click me'
+    reversed={false}
   />
 </Layout>
