--- a/src/pages/gallery.astro
+++ b/src/pages/gallery.astro
@@ -9,10 +9,10 @@ import PictureGallery from '../components/PictureGallery';
     welcomeText='welomce to my gallery'
     tagline='it sucks'
     backgroundImages={[
-      '../assets/placeholders/1920x1080.jpg',
-      '../assets/placeholders/1280x720.jpg',
-      '../assets/placeholders/1920x1080.jpg',
-      '../assets/placeholders/1280x720.jpg',
+      'src/assets/placeholders/1920x1080.jpg',
+      'src/assets/placeholders/1280x720.jpg',
+      'src/assets/placeholders/1920x1080.jpg',
+      'src/assets/placeholders/1280x720.jpg',
     ]}
     slideTime={5000}
     client:load
@@ -20,82 +20,82 @@ import PictureGallery from '../components/PictureGallery';
   <PictureGallery
     images={[
       {
-        imageRef: '../assets/placeholders/1200x800.jpg',
+        imageRef: 'src/assets/placeholders/300 x 250.jpg',
         link: '/',
         title: 'trashcan',
       },
       {
-        imageRef: 'assets/placeholders/1200x800.jpg',
+        imageRef: 'src/assets/placeholders/300 x 250.jpg',
         link: '/',
         title: 'firehydrant',
       },
       {
-        imageRef: 'assets/placeholders/1200x800.jpg',
+        imageRef: 'src/assets/placeholders/300 x 250.jpg',
         link: '/',
         title: 'recycling bin',
       },
       {
-        imageRef: 'assets/placeholders/1200x800.jpg',
+        imageRef: 'src/assets/placeholders/300 x 250.jpg',
         link: '/',
         title: 'compiuet',
       },
       {
-        imageRef: 'assets/placeholders/1200x800.jpg',
+        imageRef: 'src/assets/placeholders/1200x800.jpg',
         link: '/',
         title: 'red car',
       },
       {
-        imageRef: 'assets/placeholders/1200x800.jpg',
+        imageRef: 'src/assets/placeholders/1200x800.jpg',
         link: '/',
         title: 'blue car',
       },
       {
-        imageRef: 'assets/placeholders/1200x800.jpg',
+        imageRef: 'src/assets/placeholders/1200x800.jpg',
         link: '/',
         title: 'grey car',
       },
       {
-        imageRef: 'assets/placeholders/1200x800.jpg',
+        imageRef: 'src/assets/placeholders/1200x800.jpg',
         link: '/',
         title: 'white car',
       },
       {
-        imageRef: 'assets/placeholders/1200x800.jpg',
+        imageRef: 'src/assets/placeholders/1200x800.jpg',
         link: '/',
         title: 'pink car',
       },
       {
-        imageRef: 'assets/placeholders/1200x800.jpg',
+        imageRef: 'src/assets/placeholders/1200x800.jpg',
         link: '/',
         title: 'purple car',
       },
       {
-        imageRef: 'assets/placeholders/1200x800.jpg',
+        imageRef: 'src/assets/placeholders/1200x800.jpg',
         link: '/',
         title: ' green car',
       },
       {
-        imageRef: 'assets/placeholders/1200x800.jpg',
+        imageRef: 'src/assets/placeholders/1200x800.jpg',
         link: '/',
         title: 'orangecar',
       },
       {
-        imageRef: 'assets/placeholders/1200x800.jpg',
+        imageRef: 'src/assets/placeholders/1200x800.jpg',
         link: '/',
         title: 'tall car',
       },
       {
-        imageRef: 'assets/placeholders/1200x800.jpg',
+        imageRef: 'src/assets/placeholders/1200x800.jpg',
         link: '/',
         title: 'small car',
       },
       {
-        imageRef: 'assets/placeholders/1200x800.jpg',
+        imageRef: 'src/assets/placeholders/1200x800.jpg',
         link: '/',
         title: 'long car',
       },
       {
-        imageRef: 'assets/placeholders/1200x800.jpg',
+        imageRef: 'src/assets/placeholders/1200x800.jpg',
         link: '/',
         title: 'short car',
       },
