client visible directive

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -38,7 +38,7 @@ import TextImagecard from '../components/TextImageCard';
     Assists
     1. 	LaMelo BallCHA	13
     1. 	Luka DoncicDAL	13`
-    client:load
+    client:visible
   />
   <TextImagecard
     title='title'
