--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -37,7 +37,7 @@ const { title, metaDescription } = Astro.props;
     <title>{title ? `${title} - EgoDeath` : 'EgoDeath'}</title>
   </head>
   <body>
-    <Header title='EgoDeath' navs={['commercials', 'food', 'events']} />
+    <Header title='EgoDeath' navs={['commercials', 'food', 'events']} client:load/>
     <main>
       <slot />
     </main>
