--- a/src/pages/commercials/index.astro
+++ b/src/pages/commercials/index.astro
@@ -1,18 +1,18 @@
 ---
 import Layout from '../../layouts/Layout.astro';
-import Hero from '../../components/Hero';
+import Sidekick from '../../components/Sidekick';
 import TextImageCard from '../../components/TextImageCard';
 ---
 
 <Layout metaDescription='commercials' title='Commercials'>
-  <Hero
+  <Sidekick
     backgroundImages={[
       'src/assets/placeholders/1920x1080.jpg',
       'src/assets/placeholders/1280x720.jpg',
       'src/assets/placeholders/1920x1080.jpg',
       'src/assets/placeholders/1280x720.jpg',
     ]}
-    tagline=''
+    tagline='Commercial'
     welcomeText=''
   />
   <TextImageCard
