finished gallery modal

--- a/src/pages/commercials/[project].astro
+++ b/src/pages/commercials/[project].astro
@@ -68,5 +68,7 @@ const { testData } = Astro.props;
         link: '/',
         title: 'blue car',
       },
-    ]}></PictureGallery>
+    ]}
+    client:load
+  />
 </Layout>
