--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,6 +8,19 @@ interface Props {
 }
 
 const { title, metaDescription } = Astro.props;
+
+const websiteName = 'EgoDeath';
+const phone = '91812323';
+const address = 'your moms house';
+const navs = [
+  { link: '/commercials', name: 'COMMERCIALS' },
+  { link: '/food', name: 'FOOD' },
+  { link: '/events', name: 'EVENTS' },
+];
+const socials = [
+  { link: 'https://www.instagram.com/', type: 'instagram' },
+  { link: 'https://www.facebook.com/', type: 'facebook' },
+];
 ---
 
 <!doctype html>
@@ -35,35 +48,23 @@ const { title, metaDescription } = Astro.props;
       localStorage.theme = 'dark';
       localStorage.removeItem('theme');
     </script>
-    <title>{title ? `${title} - EgoDeath` : 'EgoDeath'}</title>
+    <title>{title ? `${title} - ${websiteName}` : websiteName}</title>
   </head>
   <body>
     <Header
-      title='EgoDeath'
-      navs={[
-        { link: '/commercials', name: 'COMMERCIALS' },
-        { link: '/food', name: 'FOOD' },
-        { link: '/events', name: 'EVENTS' },
-      ]}
+      title={websiteName}
+      navs={navs.filter((nav) => nav.link !== '/')}
       client:load
     />
     <main>
       <slot />
     </main>
     <Footer
-      address='your moms house'
-      copyright='EgoDeath 2024'
-      navs={[
-        { link: '/', name: 'HOME' },
-        { link: '/commercials', name: 'COMMERCIALS' },
-        { link: '/food', name: 'FOOD' },
-        { link: '/events', name: 'EVENTS' },
-      ]}
-      phone='91812323'
-      socials={[
-        { link: 'https://www.instagram.com/', type: 'instagram' },
-        { link: 'https://www.facebook.com/', type: 'facebook' },
-      ]}
+      address={address}
+      copyright=`${websiteName} 2024`
+      navs={navs}
+      phone={phone}
+      socials={socials}
     />
   </body>
 </html>
