--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,6 +21,7 @@ const socials = [
   { link: 'https://www.instagram.com/', type: 'instagram' },
   { link: 'https://www.facebook.com/', type: 'facebook' },
 ];
+const cta = 'Contact Us';
 ---
 
 <!doctype html>
@@ -54,12 +55,14 @@ const socials = [
     <Header
       title={websiteName}
       navs={navs.filter((nav) => nav.link !== '/')}
+      cta={cta}
       client:load
     />
     <main>
       <slot />
     </main>
     <Footer
+      cta={cta}
       address={address}
       copyright=`${websiteName} 2024`
       navs={navs}
