--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,9 +10,9 @@ interface Props {
 
 const { title, metaDescription } = Astro.props;
 
-const websiteName = 'EgoDeath';
-const phone = '91812323';
-const address = 'your moms house';
+const websiteName = 'Brand Name';
+const phone = '(918) 123-1234';
+const address = '1234 Main St, Tulsa, OK 74103';
 const navs = [
   { link: '/commercials', name: 'COMMERCIALS' },
   { link: '/food', name: 'FOOD' },
