--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,26 +3,25 @@ import Layout from '../layouts/Layout.astro';
 import Hero from '../components/Hero';
 import AboutCard from '../components/AboutCard';
 import StatsCard from '../components/StatsCard';
-import TextImagecard from '../components/TextImageCard';
+
+import { getData } from '../firebase';
+
+const heroImageData = await getData('images');
 ---
 
 <Layout title='' metaDescription='this is my first astro page'>
   <Hero
-    welcomeText='Welcome to EgoDeath'
-    tagline='Lorem ipsum dolor sit amet consectetur adipisicing elit.'
-    backgroundImages={[
-      'src/assets/placeholders/1920x1080.jpg',
-      'src/assets/placeholders/1280x720.jpg',
-      'src/assets/placeholders/1920x1080.jpg',
-      'src/assets/placeholders/1280x720.jpg',
-    ]}
+    welcomeText='Welcome text'
+    tagline='Tagline. Be mindful about what hero images you use.'
+    backgroundImages={heroImageData.flatMap(image => image.hero_images)}
     slideTime={5000}
     client:load
   />
   <AboutCard
-    aboutTitle='this is where I make a title about some stuff that we do'
-    aboutBody='its super cool'
-    linkText='Click here to find out'
+    aboutTitle='About Title Text'
+    aboutBody='This is the body of the about card. It can be as long as you want it to be. It will wrap to the next line if it is too long. This is the body of the about card. It can be as long as you want it to be. It will wrap to the next line if it is too long. This is the body of the about card. It can be as long as you want it to be. It will wrap to the next line if it is too long. This is the body of the about card. It can be as long as you want it to be. It will wrap to the next line if it is too long. This is the body of the about card. It can be as long as you want it to be. It will wrap to the next line if it is too long. This is the body of the about card. It can be as long as you want it to be. It will wrap to the next line if it is too long. This is the body of the about card. It can be as long as you want it to be. It will wrap to the next line if it is too long. This is the body of the about card. It can be as long as you want it to be. It will wrap to the next line if it is too long.'
+    linkText='See our work'
+    linkUrl='/commercials'
   />
   <StatsCard
     title='Hello Look at my Stats'
@@ -39,14 +38,5 @@ import TextImagecard from '../components/TextImageCard';
     1. 	LaMelo BallCHA	13
     1. 	Luka DoncicDAL	13`
     client:visible
-  />
-  <TextImagecard
-    title='title'
-    bodyText='blah blah'
-    imageAltText='cool picture'
-    imageLink='src/assets/placeholders/1200x800.jpg'
-    link='/'
-    linkText='click me'
-    reversed={false}
   />
 </Layout>
